# Note-Taker

./: .gitignore  Note-Taker.py  README.md  pyproject.toml
note_taker/: __init__.py  note_taker.py
